styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}
body {
    background: linear-gradient(90deg,rgb(44, 44, 44),black 99%);
    color: white;
    font-family: "Josefin Sans" , sans-serif;
    min-width: 100%;
    overflow-x: hidden;
}


header {
    width:100vw;
    height: 10vh;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: rgb(80, 80, 80);
    border-bottom: 1px solid orangered;
    z-index: 1000;
}
.logo {
    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border-radius: 20px;
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
    padding: 0 10px;
}
.logo h1 {
    color: rgb(20, 20, 20);
    letter-spacing: 0.2em;
    background: linear-gradient(90deg,yellow , rgb(255, 196, 0),rgb(255, 166, 0),rgb(255, 81, 0),rgb(255, 0, 0),rgb(88, 218, 88),rgb(83, 170, 211),rgb(106, 65, 201),yellow);
    background-clip: text;
    -webkit-text-stroke: 0.1em transparent;
    padding: 5px 7px;
    
}

header nav ul {
    display: flex;
    list-style: none;
    justify-content: space-between;
    gap: 1.5vw;
    border-bottom: 1px solid grey;
    padding: 7px;

}
ul li {
    transition: transform 0.1s linear;
    font-size: 0.8em;
}
ul li a:hover {
    color: orangered;
    transform: translateY(-5px);
}
main {
    display: grid;
    grid-template-columns: repeat(1fr);
    grid-template-rows: 100vh;
    min-width: 100%;
    
}

#welcome-section {
    justify-self: center;
    align-self: center;
}



#welcome-section img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,0%);
    width: 60vw;
    height: auto;
    z-index: -1;
    opacity: 7%;
}



.hello {
    font-size: 10em;
    background: linear-gradient(49deg,pink,white,orangered);
    background-clip: text;
    color: transparent;
    font-weight: bold;
    text-align: center;
}


#welcome-section p {
    font-size: 2rem;
}

.name span , .description span {
    color: orangered;
    font-weight: 200;
    font-style: italic;
}

#projects a img {
    width: 250px;
    height: 100%;
    vertical-align: bottom;
    border-radius: 10px;
}

#projects {
    background-color: rgba(48, 48, 48 ,50%);
    padding: 50px;
    display: flex;
    flex-direction: column;
    gap: 40px;
}


#projects h2 {
    font-size: 1.4em;
    text-align: center;
    vertical-align: middle;

}

.projects-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit , minmax(300px,1fr));
    text-align: center;
    justify-content: center;
    align-items: center;
    margin-top: 70px;
    gap: 40px;
}

.projects-grid a {
    justify-self: center;
    align-self: center;
    background-color: rgb(255, 255, 255);
    padding-top: 20px;
    border-radius: 12px;
    position: relative;
    display: block;
    transition:  transform 0.2s;
    color: #333;
}

.projects-grid a::after {
    position: absolute;
    content: "";
    height: 102%;
    width: 103%;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    background: conic-gradient(yellow,orange,orangered,red,yellow);
    z-index: -1;
    border-radius: 10px;
    filter: blur(10px);
}
.projects-grid a:hover {
    box-shadow: 1px 1px 3px 3px rgb(196, 196, 196) , -1px -1px 3px 3px rgb(180, 180, 180);
    transform: translateY(-10px);
}

button {
    align-self: center;
    padding: 10px 30px;
    outline: none;
    color: #fff;
    cursor: pointer;
    border-radius: 12px;
    border: none;
    position: relative;
    z-index: 0;
}

button::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #333;
    left: 0;
    top: 0;
    z-index: -1;
    border-radius: 10px;
}

button::before {
    content: "";
    background: linear-gradient(46deg,yellow,orange,orangered,red,yellow);
    position: absolute;
    top: -2px;
    left: -2px;
    background-size: 600%;
    z-index: -1;
    width: calc(100% + 4px);
    height: calc(100% + 4px);
    filter: blur(8px);
    transition: opasity .3s ease-in-out;
    opacity: 1;
    animation: glowing 20s linear infinite;
}

button:hover::after{
    background: transparent;
}
button:hover {
    color: black;
}

@keyframes glowing {
    0%{
        background-position: 0 0;
    }
    50%{
        background-position: 400% 0;
    }
    100%{
        background-position: 0 0;
    }
}

#contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 50vh;
    min-width: 100%;
    background-color: #333;
    gap: 70px;
}

.contact-text h3 {
    font-size: 4vw;
    font-weight: bold;
}

.contact-text p {
    font-size: 20px;
    font-weight: 100;
    transform: translateY(5px);
}

a {
    text-decoration: none;
    color: white;
    font-size: 1.3em;
    display: flex;
    align-items: center;
    gap: 2px;
    transition: transform 0.2s linear;
}

.socials {
    display: flex;
    justify-items: space-between;
    align-items: center;
    gap: 50px;
}
 .socials i {
    font-size: 2em;
}

.socials a:hover {
    transform: translateY(-10px);
}

footer {
    width: 100%;
    height: 10vh;
    min-width: 100%;
    display: flex;
    background-color: rgb(14, 14, 14);
    color: white;
    justify-content: space-around;
    align-items: center;
    font-size: 1.2em;
}

@media (max-width: 768px) {
   header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
    height:20vh
   }

   header nav ul {
    justify-content: center;
    gap: 70px;
   }

   #welcome-section {
    padding: 0 15px;
   }

    
    #welcome-section .hello {
        font-size: 5em;
    }

    #welcome-section p {
        font-size: 1.4em;
        transform: translateY(10px);
    }

    #welcome-section img {
        width: 100%;
        height: auto;
    }

    .work-items {
        flex-direction: column;
    }

    .projects-grid {
        grid-template-columns: 1fr;
    }

    .contact-info {
        text-align: center;
    }
    .contact-text p {
        font-size: 0.8em;
    }
    .socials {
        gap:18px;
    }
    .socials a {
        font-size: 1.2em;
        flex-direction: column;
        flex-wrap: wrap;
        flex: 1;
    }
    .socials a span {
        display: none;
    }
    footer p {
        font-size: 0.7em;
        flex-wrap: wrap;
        gap: 15px;
        text-align: center;
    }
}

